FIX text-align presentation

--- a/style_mobile.css
+++ b/style_mobile.css
@@ -229,10 +229,6 @@
         padding: 10% 5% 10% 5%;
     }
 
-    .presentation_content {
-        text-align: center;
-    }
-
     .avatar_container {
         width: 100%;
         display: flex;
