--- a/style_tablet.css
+++ b/style_tablet.css
@@ -228,10 +228,6 @@
         padding: 2% 5% 2% 5%;
     }
 
-    .presentation_content {
-        text-align: center;
-    }
-
     .avatar_container {
         width: 100%;
         display: flex;
